--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,8 +1,9 @@
 <mvc:View
 	xmlns="sap.m"
 	xmlns:form="sap.ui.layout.form"
+	xmlns:l="sap.ui.layout"
 	xmlns:mvc="sap.ui.core.mvc">
-	<Panel headerText="{i18n>panelHeaderText}" class="sapUiResponsiveMargin" width="auto">
+	<Panel headerText="{i18n>panel1HeaderText}" class="sapUiResponsiveMargin" width="auto">
 		<form:SimpleForm editable="true" layout="ColumnLayout">
 			<Label text="{i18n>firstName}"/>
 			<Input value="{/firstName}" valueLiveUpdate="true" width="200px" enabled="{/enabled}"/>
@@ -11,5 +12,16 @@
 			<Label text="{i18n>enabled}"/>
 			<CheckBox selected="{/enabled}"/>
 		</form:SimpleForm>
+	</Panel>
+	<Panel headerText="{i18n>panel2HeaderText}" class="sapUiResponsiveMargin" width="auto">
+		<content>
+			<l:VerticalLayout>
+				<Label labelFor="address" text="{i18n>address}:"/>
+				<FormattedText class="sapUiSmallMarginBottom"
+					htmlText="{/address/street}&lt;br>{/address/zip} {/address/city}&lt;br>{/address/country}"
+					id="address" 
+					width="200px"/>
+			</l:VerticalLayout>
+		</content>
 	</Panel>
 </mvc:View>
